--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -79,6 +79,10 @@
  </Reference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
+      <Project>{65030C2F-B873-B3B5-9EB1-49EF81431716}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
+    <ProjectReference Include="Assembly-UnityScript-firstpass.unityproj">
+      <Project>{A0F3A65D-41DB-C5B9-413F-DACB0590127F}</Project>      <Name>Assembly-UnityScript-firstpass</Name>    </ProjectReference>
     <ProjectReference Include="Assembly-CSharp.csproj">
       <Project>{7DD0ACA9-34D1-9471-FCC2-187C36201B38}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
   </ItemGroup>
