--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\CreateCubeOnStart.cs" />
      <Compile Include="Assets\DemoVikings\Demo\Assets\AnimationController.cs" />
      <Compile Include="Assets\DemoVikings\Demo\Assets\CloseCameraFade.cs" />
      <Compile Include="Assets\DemoVikings\Demo\Assets\Label\Label.cs" />
